# fava-envelope

./: .replit  CHANGELOG.md  Makefile  README.md  pyproject.toml
src/fava_envelope/: __init__.py
src/fava_envelope/modules/: beancount_envelope.py  budgets.py  convert.py  directive.py  envelope_link.py  main.py  year_month.py
src/fava_envelope/templates/: EnvelopeBudget.html  _envelope_query_table.html
typings/beancount/: __init__.pyi  loader.pyi
typings/beancount/core/: __init__.pyi  account.pyi  account_test.pyi  account_types.pyi  account_types_test.pyi  amount.pyi  amount_test.pyi  compare.pyi  compare_test.pyi  convert.pyi  convert_test.pyi  data.pyi  data_test.pyi  display_context.pyi  display_context_test.pyi  distribution.pyi  distribution_test.pyi  flags.pyi  flags_test.pyi  getters.pyi  getters_test.pyi  interpolate.pyi  interpolate_test.pyi  inventory.pyi  inventory_test.pyi  number.pyi  number_test.pyi  position.pyi  position_test.pyi  prices.pyi  prices_test.pyi  realization.pyi  realization_test.pyi
typings/beancount/ingest/: __init__.pyi  cache.pyi  extract.pyi  identify.pyi  similar.pyi
typings/beancount/ops/: __init__.pyi  summarize.pyi  validation.pyi
typings/beanquery/: __init__.pyi  compiler.pyi  cursor.pyi  cursor_test.pyi  errors.pyi  numberify.pyi  numberify_test.pyi  parser_test.pyi  query.pyi  query_compile.pyi  query_compile_test.pyi  query_env.pyi  query_env_test.pyi  query_execute.pyi  query_execute_test.pyi  query_render.pyi  query_render_test.pyi  query_test.pyi  shell.pyi  shell_test.pyi  tables.pyi  types.pyi
(+50 files in other folders)
