[project]
name = "memst-fava-envelope"
version = "2024.12.19"
description = ""
readme = "README.md"
keywords = ["fava", "budget", "envelope"]
authors = [
  {email = "me@brianryall.xyz", name = "Brian Ryall"},
  {name = "memst"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fava>=1.29",
    "pandas>=2.0.3",
    "beanquery",
]

requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
excludes = ["./**/.git"]
package-dir = "src"
includes = ["src/fava_envelope"]
#source-includes = ["tests", "CHANGELOG.md", "LICENSE", "README.md"]
# editables backend doesn't work well with namespace packages
editable-backend = "path"

[project.urls]
homepage = "https://github.com/polarmutex/fava-envelope"
documentation = "https://github.com/polarmutex/fava-envelope"
repository = "https://github.com/polarmutex/fava-envelope"
changelog = "https://github.com/polarmutex/fava-envelope/master/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 79

[tool.pyright]
reportMissingTypeStubs = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]